# DesvendaRS

./: .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml
.streamlit/: config.toml
app/: __init__.py  ai_overview.py  db.py  dossier.py  queries.py  streamlit_app.py  ui.py
docs/: ai_overview_integration.md  catalogo_redflags_score.md  dicionario_dados.md  exemplos_queries.sql  inventario_fontes.md  redflags.md
etl/: build_db.py  load_contratos.py  load_empresas.py  load_eventos.py  load_itens.py  load_propostas.py  load_propostas_itens.py  load_sancoes.py  load_socios.py  normalize.py  score_redflags.py
scripts/: baixar_fontes.py  create_mock_db.py  inventario.py
tests/: conftest.py  test_app_queries.py  test_itens.py  test_joins.py  test_load_contratos.py  test_mock_db.py  test_normalize.py  test_propostas_eventos.py  test_schema.py  test_score_redflags.py  test_web.py
web/: __init__.py  main.py
web/static/: app.js  style.css
web/templates/: base.html  empresa.html  index.html  indisponivel.html  licitacao.html  licitacoes.html
